--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@ html,
 body,
 #root {
   height: 100%;
+  min-width: 400px;
+  min-height: 600px;
 }
 
 body {
@@ -13,4 +15,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+simple-notes {
+  border-radius: 2px;
+  height: 100%;
+  background: #222;
+  color: white;
+  text-align: center;
+  min-width: 400px;
+  min-height: 600px;
 }
